# TCR

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser-gui.yml  .goreleaser.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  fyne-cross-wrapper.bash  fyne-cross-wrapper.bat  fyne-cross.bash  go.mod  go.sum  go.work  go.work.sum  main.go  release.bash  sonar-project.properties  tcr-script-reference.sh  tcr.go  updateCliDoc.bash  updateCliDoc.sh  xbuild.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/prompts/: README.md  upgrade-golang-version.prompt.md
.github/workflows/: add_contributors.yml  go.yml  go_releaser.yml  golangci_lint.yml  goreleaser.yml  npm.yml  sonar.yml  xgo.yml
.run/: go build github.com_murex_tcr.run.xml
.zed/: environment.json  settings.json
auto-install/: README.md  banner.sh  setup.sh  tcr-setup.sh  tcrw  version.txt
cmd/: cmd.go  gui.go  keyboard.go  mob.go  root.go  sandbox.go  solo.go
dev-doc/: README.md  build.md  debug.md  quality-metrics.md  release.md
doc/: gen_doc.go  go.mod  go.sum  tcr-gui.md  tcr.md  tcr_check.md  tcr_config.md  tcr_config_reset.md  tcr_config_save.md  tcr_config_show.md  tcr_gui.md  tcr_info.md  tcr_log.md  tcr_metrics.md  tcr_mob.md  tcr_one-shot.md  tcr_retro.md  tcr_solo.md  tcr_stats.md  tcr_web.md
doc/features/: README.md  basic_workflow.feature  failure_handling.feature  limitations.feature  onboarding.feature  refactoring.feature  tcr_overview.feature  training_mode.feature
engine/: params.go  tcr.go  version.go
examples/: README.md  go.work  go.work.sum
examples/cpp-bazel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
examples/cpp-bazel/.tcr/: config.yml
examples/cpp-bazel/.tcr/language/: cpp.yml
examples/cpp-bazel/.tcr/toolchain/: bazel.yml
examples/cpp-bazel/bazel/: windows_dll_library.bzl
examples/cpp-bazel/include/: config.hpp
examples/cpp-cmake/: CMakeLists.txt  README.md  cmake_easy_setup.sh
examples/cpp-cmake/.tcr/: config.yml
examples/cpp-cmake/.tcr/language/: cpp.yml
examples/cpp-cmake/cmake/: FindGoogleTest.cmake
examples/cpp-cmake/include/: HelloWorld.hpp
examples/cpp-cmake/src/: HelloWorld.cpp
examples/cpp-cmake/test/: HelloWorldTest.cpp
examples/csharp-dotnet/: HelloWorld.sln  README.md
examples/elixir-mix/: README.md  mix.exs
examples/go-bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum
examples/go-bazel/.tcr/: config.yml
examples/go-bazel/.tcr/language/: go.yml
examples/go-bazel/.tcr/toolchain/: bazel.yml
examples/go-bazel/src/: BUILD.bazel  hello_world_test.go
examples/go-go-tools/: README.md  go.mod
examples/go-gotestsum/: .gitignore  README.md  go.mod  go.sum
examples/go-make/: Makefile  README.md  go.mod
examples/haskell-stack/: .gitignore  README.md  hello-world.cabal  package.yaml
examples/java-bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
examples/java-bazel/.tcr/: config.yml
examples/java-bazel/.tcr/language/: java.yml
examples/java-bazel/src/main/java/com/example/: HelloWorld.java
examples/java-bazel/src/test/java/com/example/: HelloWorldTest.java
examples/java-gradle/: README.md  build.gradle
examples/java-gradle-wrapper/: .gitignore  README.md  build.gradle
examples/java-make/: Makefile  README.md
examples/java-maven-wrapper/: .gitignore  README.md  pom.xml
examples/python-bazel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  requirements.txt
examples/python-bazel/.tcr/: config.yml
examples/python-bazel/.tcr/language/: python.yml
examples/python-bazel/tests/: test_hello_world.py
filesystem/: sourcetree.go  sourcetree_impl.go
language/: cpp.go  java_test.go  language.go
report/: reporter.go  reporter_test.go
role/: navigator_test.go  role.go  role_test.go
runmode/: runmode.go  runmode_test.go  solo.go
sandbox/: cmd.go  console.go  keyboard.go  keyboard_windows.go
scripts/: fyne-cross-wrapper.bash  fyne-cross-wrapper.bat  fyne-cross.bash  release.bash
src/: Makefile  Slow Tests.md  config.yml  go.mod  go.sum  main.go  module-dependencies.mmd  tcr-local  tcr-local-p4  tcr.feature  to_mermaid.go  to_mermaid_test.go
stty/: stty.go  stty_test.go
tcr/: fs_watch.go  git.go  kata.go  language.go  language_test.go  main_menu.go  main_menu_windows.go  os_toolbox.go  params.go  tcr.go  toolchain.go  toolchain_darwin.go  toolchain_darwin_test.go  toolchain_linux.go  toolchain_linux_test.go  toolchain_test.go  toolchain_windows.go  toolchain_windows_test.go  user_interface.go  version.go
tcr-cli/: LICENSE.md  Makefile  go.mod  go.sum  main.go  tcr-cli-graph.gv  tools.go
tcr-doc/: Makefile  gen_doc.go  go.mod  go.sum
tcr-engine/: Makefile  go.mod  go.sum  main.go  tcrw
tcr-engine/testdata/cpp/: CMakeLists.txt  cpp_easy_setup.sh
tcr-engine/testdata/cpp/.tcr/: config.yml
tcr-engine/testdata/cpp/.tcr/language/: cpp.yml
tcr-engine/testdata/cpp/.tcr/toolchain/: cmake-kata.yml  cmake.yml
tcr-engine/testdata/cpp/cmake/: FindGoogleTest.cmake
tcr-engine/testdata/cpp/include/kata/dummy/: Dummy.hpp
tcr-engine/testdata/cpp/src/kata/dummy/: Dummy.cpp
tcr-engine/testdata/cpp/test/: DummyTest.cpp
tcr-gui/: Makefile  go.mod  go.sum  main.go
toolchain/: cmake.go  cmake_test.go  cmake_windows.go  cmake_windows_test.go  gradle.go  gradle_test.go  maven.go  maven_test.go  toolchain.go  toolchain_test.go
trace/: trace.go  trace_test.go
ui/: user_interface.go
variants-doc/: generate_png.bash  tcr_variants.md  variant-btcr.mermaid  variant-original.mermaid  variant-relaxed.mermaid  variant-relaxed.mmd
vcs/: git_impl.go  git_impl_test.go
webapp/: .editorconfig  .eslintrc.json  .gitignore  .npmrc  Makefile  README.md  angular.json  eslint.config.js  karma.conf.js  package-lock.json  package.json  tsconfig.spec.json  vite-angular-transformer.js  vite-angular-transformer.mjs  vitest.config.mjs  vitest.config.ts
(+1108 files in other folders)
