module(
    name = "hello_world_go",
    version = "1.0",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.57.0")

# Gazelle for Go dependency management
bazel_dep(name = "gazelle", version = "0.45.0")

# Go SDK and dependencies
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Use gazelle to manage Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_stretchr_testify",
)
