load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "hello-world",
    srcs = glob(["src/main/java/**"]),
)

java_test(
    name = "HelloWorldTest",
    srcs = glob(["src/test/java/**/*.java"]),
    jvm_flags = [
        "-XX:+IgnoreUnrecognizedVMOptions",
        "-Djava.security.manager=disallow",
    ],
    use_testrunner = False,
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
        "execute",
        "--select-class",
        "com.example.HelloWorldTest",
    ],
    deps = [
        ":hello-world",
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
        artifact("org.junit.jupiter:junit-jupiter-engine"),
        artifact("org.junit.platform:junit-platform-launcher"),
        artifact("org.junit.platform:junit-platform-reporting"),
        artifact("org.junit.platform:junit-platform-console"),
    ],
)
