module(
    name = "hello_world_java",
    version = "1.0",
)

# Use rules_jvm_external for Maven dependency resolution
bazel_dep(name = "rules_jvm_external", version = "6.5")

# Configure Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-launcher:1.11.3",
        "org.junit.platform:junit-platform-reporting:1.11.3",
        "org.junit.platform:junit-platform-console:1.11.3",
        "org.junit.jupiter:junit-jupiter-api:5.11.3",
        "org.junit.jupiter:junit-jupiter-params:5.11.3",
        "org.junit.jupiter:junit-jupiter-engine:5.11.3",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(maven, "maven")
