module(
    name = "hello_world_java",
    version = "1.0",
)

# Use rules_jvm_external for Maven dependency resolution
bazel_dep(name = "rules_jvm_external", version = "6.8")

# Configure Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-launcher:6.0.0",
        "org.junit.platform:junit-platform-reporting:6.0.0",
        "org.junit.platform:junit-platform-console:6.0.0",
        "org.junit.jupiter:junit-jupiter-api:6.0.0",
        "org.junit.jupiter:junit-jupiter-params:6.0.0",
        "org.junit.jupiter:junit-jupiter-engine:6.0.0",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(maven, "maven")
