load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "hello_world",
    srcs = glob(["src/**/*.py"]),
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_hello_world",
    size = "small",
    srcs = glob(["tests/*.py"]),
    imports = ["src"],
    deps = [
        ":hello_world",
    ],
)
