module(
    name = "hello_world_python",
    version = "1.0",
)

# Python rules
bazel_dep(name = "rules_python", version = "1.6.3")

# Python interpreter
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

# Pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
