workspace(name = "hello_world_python")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "94750828b18044533e98a129003b6a68001204038dc4749f40b195b24c38f49f",
    strip_prefix = "rules_python-0.21.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.21.0/rules_python-0.21.0.tar.gz",
)

http_archive(
    name = "rules_python_pytest",
    sha256 = "334a0ac91a0d6a87df499cdf9b70b525754dc8ca4873763116d67177f759389f",
    strip_prefix = "rules_python_pytest-1.0.2",
    url = "https://github.com/caseyduquettesc/rules_python_pytest/archive/v1.0.2.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories")
load("@rules_python_pytest//python_pytest:repositories.bzl", "rules_python_pytest_dependencies")

rules_python_pytest_dependencies()

py_repositories()
