load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helloworld",
    srcs = ["hello_world.go"],
    importpath = "github.com/murex/tcr/examples/go-bazel/src",
    visibility = ["//visibility:public"],
)

go_test(
    name = "helloworld_test",
    size = "small",
    srcs = ["hello_world_test.go"],
    embed = [":helloworld"],
    deps = ["@com_github_stretchr_testify//assert"],
)
